web/less/details.less
/* Colors */ 
@label-gray: #CCC;
@timelineControlFontColor: #888;
@timelineControlFontColorActive: #82c0d3;

.details {
  display: block;
  position: relative;
  font-size: 0.6em;
  background-color: white;

  .left-canvas {
    float: left;
    width: 60%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    border-width: 0;
    -o-border-image: -o-linear-gradient(bottom, white 0%, @label-gray 60%, white 100%) 1 100%;
    -moz-border-image: -moz-linear-gradient(bottom, white 0%, @label-gray 60%, white 100%) 1 100%;
    -ms-border-image: -ms-linear-gradient(bottom, white 0%, @label-gray 60%, white 100%) 1 100%;
    -webkit-border-image: -webkit-linear-gradient(bottom, white 0%, @label-gray 60%, white 100%) 1 100%;
    border-right-width: 1px;
    padding: 30px;
  }

  .right-canvas {
    float: right;
    width: 40%;
    box-sizing: border-box;
    -moz-box-sizing: border-box;    
    padding: 30px;
  }
  
  .name {
    font-size: 2em;
    margin-bottom: 15px;
    color: @label-gray;
    line-height: 150%;
  }
  
  .chart-kpi {
    font-size: 5em;
  }
 
  .chart-label {
    font-size: 12px;
    fill: #CCC;
  }
  
  .load {
    .chart {
      display: inline-block;
      margin: 0 15px 10px 35px;
    }

    .kpi-group {
      font-size: 2.5em;
      line-height: 120%;
      position: absolute;
      margin-top: -20px;
      
      p {
        display: inline-block;
        width: 66px;
        text-align: center;
      }
      
      .stat-label {
        display: block;
      }
    }

  }
  
  .memory {
    .chart {
      display: inline-block;
      margin: 0 15px 10px 35px;
    }
    
    .kpi-group {
      font-size: 3em;
      line-height: 100%;
      display: inline-block;
    }
  }
  
  .sub-stats {
    font-size: 0.6em;
    color: #AAA;
    line-height: 150%;
    
    p {
      display: inline;
    }
  }

  .stat-label { 
    font-size: 11px;
    color: @label-gray;
    box-sizing: border-box;
    line-height: 12px;
  }
  
  .vcpu {
    margin-left: 20px;
    display: inline-block;
    vertical-align: top;
    width: 320px;

    .stats {
      height: 40px;
      margin-left: 10px;
      position: relative;
      font-size: 3.5em;
    }
    
    .legend {
      position: static;
      display: inline-block;
      font-size: 1.5em;
    
      .numbers {
        float: left;
        text-align: right;
      
        p {
          padding-left: 0;
          padding-right: 10px;
        }
      }
    }
    
    .chart {
      margin: 0;
      display: inline-block;
    
      .bar {
        width: 32px;
        margin-right: 8px;
        position: relative;
        display: inline-block;
        height: 80px;
        background-color: #eee;
        
        &:first-of-type:nth-last-of-type(n+9),
        &:first-of-type:nth-last-of-type(n+9) ~ .bar {
          width: 16px;
          margin-right: 4px;
        }
        
        &:first-of-type:nth-last-of-type(n+17),
        &:first-of-type:nth-last-of-type(n+17) ~ .bar {
          width: 10px;
          margin-right: 3px;
        }
        
        &:first-of-type:nth-last-of-type(n+25),
        &:first-of-type:nth-last-of-type(n+25) ~ .bar {
          width: 8px;
          margin-right: 2px;
        }
      }

      .used, .wait {
        position: absolute;
        bottom: 0;
        width: 100%;
        background-color: #65A1DC;
      }
      
      .wait {
        background-color: #18E000;
      }
    }
  }

}

.details-2 {  
  @label-gray: #BBB;
  background-color: #EEE;
  
  .normal {
    color: #333;
  }

  .left-canvas {
    width: 33%;
    -o-border-image: -o-linear-gradient(bottom, #EEE 0%, @label-gray 60%, #EEE 100%) 1 100%;
    -moz-border-image: -moz-linear-gradient(bottom, #EEE 0%, @label-gray 60%, #EEE 100%) 1 100%;
    -ms-border-image: -ms-linear-gradient(bottom, #EEE 0%, @label-gray 60%, #EEE 100%) 1 100%;
    -webkit-border-image: -webkit-linear-gradient(bottom, #EEE 0%, @label-gray 60%, #EEE 100%) 1 100%;
  }

  .middle-canvas {
    width: 40%;
  }

  .right-canvas {
    width: 27%;
  }
  
  .unit {
    font-size: 12px;
  }

  .name, .unit, .stat-label{
    color: @label-gray;
  }

  .sub-name{
    font-style: Italic;
    font-size: 12px;
  }

  .throughput {

    margin: none;

    .kpi-group {
      font-size: 3em;
      line-height: 120%;
      display: inline-block;
      padding-left: 5px;
      padding-right: 10px;
    }
 
    .right {
      padding-right: 0;
    }
  }

  .storage {
    
    .stats {
      position: relative;
      font-size: 3.5em;
      height: 30px;
      text-align: right;
    }
    
    .sub-name {
      position: absolute;
      left: 0;
      bottom: 4px;
    }
    
    .bars {
      padding-bottom: 20px;
      height: 30px;
      text-align: center;
      font-size: 1.5em;
      color: white;
      display: inline-block;
      white-space: nowrap;
      
      .number {
        position: absolute;
        z-index: 10;
        width: 100%;
        padding: 0 2px;
      }
      
      .usage, .free {
        width: 285px;
        height: 40px;
        float: left;
        position: relative;
        white-space: nowrap;
        
        .bar {
          padding-top: 4px; 
          height: 30px;
          box-sizing: border-box;
          background-color: #18E000;
          overflow-x: hidden;
        }
      }

      .usage .unit {
        color: white;
      }

      .free .bar {
        background-color: #DDD;
        color: @label-gray;
      }
      
      
    }
  }
}


.timeline {
  background-color: #333;
  position: relative;
  cursor: default;
  padding-top: 15px;
   
  .periods, .timestamp {
    position: absolute;
    top: -10px;
    left: 20px;
    background-color: #333;
    padding: 2px 10px;
    border-radius: 12px;
    line-height: 20px;
    font-size: 0.8em;
  }
   
  .period {
    margin: -2px 6px;
    padding: 2px 4px;
    cursor: pointer;
    color: @timelineControlFontColor;
    
    &.active {
      color: @timelineControlFontColorActive;
    }
  }
  
  .timestamp {
    top: -10px;
    left: auto;
    right: 20px;
    color: @timelineControlFontColor;
    
    .icon {
      margin: 0 0 0 5px;
      cursor: pointer;
      color: @timelineControlFontColorActive;
    }
  }
  
  .graph-label {
    fill: #888;
  }
  
  .graph {
    stroke-width: 1;
    fill: none;  
  }
  
  .load {
    stroke: #3E64FF;
  }
  
  .memory {
    stroke: #E839CC;
  }
  
  .storage {
    stroke: #FF9B4B;
  }
  
  .network {
    stroke: #2E9E5E;
  }
  
  .network-error {
    fill: orange;
  }
  
  .meridian {
    stroke: #ccc;
    stroke-width: 1px;
    visibility: hidden;
  }
  
  .meridian-bg {
    stroke: transparent;
    stroke-width: 10px;
  }
  
  .active .meridian {
    visibility: visible;
  }
  
  .x-axis {
    fill: #AAA;
    font-size: 0.8em;
  }
}

